add main-heading, snake-board, score-counter and restart button to html, add style to body and main-heading

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <canvas id="snake-board"></canvas>
 
-    <h3 id="score-counter">Score: <span id="score">0</span></h3>
+    <h3 id="score">Score: <span id="score-counter">0</span></h3>
 
     <button id="restart">Restart</button>
 
