add functions to JS to load the board onload and update the color to black when initialized

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
     <h1 id="main-heading">JavaScript Snake</h1>
 
-    <canvas id="snake-board"></canvas>
+    <canvas id="board"></canvas>
 
     <h2 id="score">Score: <span id="score-counter">0</span></h2>
 
