add instructions to HTML with CSS

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     
     <h1 id="main-heading">JavaScript Snake</h1>
 
+    <p id="instructions">Welcome to JavaScript Snake, want to know how to play? Its easy! You, the orange snake, must collect as much red food as possible without moving out of bounds or colliding with the snake itself, easy! To move the snake around, simply use the WASD keys on your keyboard, W for up, A for left, S for down and D for right. And remember, the snake cannot consume itself, that means you cannot move in the opposite direction of where you are currently going, if you are moving up or down, you must use A or D to chnage direction, and if you are moving side to side, you must use W and S to change direction!</p>
+
     <canvas id="board"></canvas>
 
     <h2 id="score">Score: <span id="counter">0</span></h2>
