add footer with social external links, add media queries to board and instructions in css

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="Richard Nolan, game, snake,project 2, JavaScript">
     <link rel="stylesheet" href="assets/css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Kablammo&family=Orbit&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/9ca1dd2a7d.js" crossorigin="anonymous"></script>
     <script src="assets/js/script.js"></script>
     <title>JavaScript Snake</title>
 </head>
@@ -18,32 +19,24 @@
 
     <canvas id="board"></canvas>
 
-    <div id="leader-board">
-        <span id="first" class="positions">1</span>
-        <span id="second" class="positions">2</span>
-        <span id="third" class="positions">3</span>
-        <span id="fourth" class="positions">4</span>
-        <span id="fifth" class="positions">5</span>
-    </div>
-
     <h2 id="score">Score: <span id="counter">0</span></h2> <!--H2 with a span inside targeted in JS to increment the current game score-->
 
     <button id="restart">Restart</button> <!--the onclick reloads the page when the button is clicked-->
 
-    <footer class="row col-12">
+    <footer class="col-12">
         <div class="col-12">
             <ul>
             <li>
-                <a href="https://www.facebook.com/" target="_blank" rel="noopner" aria-label="visit facebook (open in a new tab)"><i class="fa-brands fa-square-facebook fa-2xl col-3"></i></a>
+                <a href="https://www.facebook.com/" target="_blank" rel="noopner" aria-label="visit facebook (open in a new tab)"><i class="fa-brands fa-square-facebook fa-2xl col-2"></i></a>
             </li>
             <li>
-                <a href="https://www.instagram.com" target="_blank" rel="noopner" aria-label="visit instagram (open in a new tab)"><i class="fa-brands fa-square-instagram fa-2xl col-3"></i></a>
+                <a href="https://www.instagram.com" target="_blank" rel="noopner" aria-label="visit instagram (open in a new tab)"><i class="fa-brands fa-square-instagram fa-2xl col-2"></i></a>
             </li>
             <li>
-                <a href="https://linkedin.com" target="_blank" rel="noopner" aria-label="visit linkedin (open in a new tab)"><i class="fa-brands fa-linkedin fa-2xl col-3"></i></a>
+                <a href="https://linkedin.com" target="_blank" rel="noopner" aria-label="visit linkedin (open in a new tab)"><i class="fa-brands fa-linkedin fa-2xl col-2"></i></a>
             </li>
             <li>
-                <a href="https://www.youtube.com" target="_blank" rel="noopner" aria-label="visit youtube (open in a new tab)"><i class="fa-brands fa-youtube fa-2xl col-3" style="color: #d91212;"></i></a>
+                <a href="https://www.youtube.com" target="_blank" rel="noopner" aria-label="visit youtube (open in a new tab)"><i class="fa-brands fa-youtube fa-2xl col-2" style="color: #d91212;"></i></a>
             </li>
         </ul>
         </div>
