--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
         <div class="col-12">
             <ul>
             <li>
-                <a href="https://www.facebook.com/" target="_blank" rel="noopner" aria-label="visit facebook (open in a new tab)"><i class="fa-brands fa-square-facebook fa-2xl col-2"></i></a>
+                <a href="https://www.facebook.com/" target="_blank" rel="noopner" aria-label="visit facebook (open in a new tab)"><i class="fa-brands fa-square-facebook fa-2xl col-s-3 col-3"></i></a>
             </li>
             <li>
-                <a href="https://www.instagram.com" target="_blank" rel="noopner" aria-label="visit instagram (open in a new tab)"><i class="fa-brands fa-square-instagram fa-2xl col-2"></i></a>
+                <a href="https://www.instagram.com" target="_blank" rel="noopner" aria-label="visit instagram (open in a new tab)"><i class="fa-brands fa-square-instagram fa-2xl col-s-2 col-2"></i></a>
             </li>
             <li>
-                <a href="https://linkedin.com" target="_blank" rel="noopner" aria-label="visit linkedin (open in a new tab)"><i class="fa-brands fa-linkedin fa-2xl col-2"></i></a>
+                <a href="https://linkedin.com" target="_blank" rel="noopner" aria-label="visit linkedin (open in a new tab)"><i class="fa-brands fa-linkedin fa-2xl col-s-2 col-2"></i></a>
             </li>
             <li>
-                <a href="https://www.youtube.com" target="_blank" rel="noopner" aria-label="visit youtube (open in a new tab)"><i class="fa-brands fa-youtube fa-2xl col-2" style="color: #d91212;"></i></a>
+                <a href="https://www.youtube.com" target="_blank" rel="noopner" aria-label="visit youtube (open in a new tab)"><i class="fa-brands fa-youtube fa-2xl col-s-3 col-3" style="color: #d91212;"></i></a>
             </li>
         </ul>
         </div>
