--- a/index.html
+++ b/index.html
@@ -9,19 +9,20 @@
     <link href="https://fonts.googleapis.com/css2?family=Kablammo&family=Orbit&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/9ca1dd2a7d.js" crossorigin="anonymous"></script>
     <script src="assets/js/script.js"></script>
-    <title>JavaScript Snake</title>
+    <title>JavaScript Snake!</title>
 </head>
 <body>
     
     <h1 id="main-heading">JavaScript Snake</h1>
 
     <p id="instructions">Welcome to JavaScript Snake, want to know how to play? Its easy! You, the orange snake, must collect as much red food as possible without moving out of bounds or colliding with the snake itself, easy! To move the snake around, simply use the WASD keys on your keyboard, W for up, A for left, S for down and D for right. And remember, the snake cannot consume itself, that means you cannot move in the opposite direction of where you are currently going, if you are moving up or down, you must use A or D to chnage direction, and if you are moving side to side, you must use W and S to change direction!</p>
+    <!-- instructions displayed on the webpage on how to play the game -->
 
-    <canvas id="board"></canvas>
+    <canvas id="board"></canvas> <!-- canvas used to display the snake board -->
 
     <h2 id="score">Score: <span id="counter">0</span></h2> <!--H2 with a span inside targeted in JS to increment the current game score-->
 
-    <button id="restart">Restart</button> <!--the onclick reloads the page when the button is clicked-->
+    <button id="restart">Restart</button> <!--reloads the page when the button is clicked-->
 
     <footer class="col-12">
         <div class="col-12">
