add comments to HTML and CSS

--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <meta name="description" content="Richard Nolan Code Institute Project 2, A game of snake">
     <meta name="keywords" content="Richard Nolan, game, snake,project 2, JavaScript">
     <link rel="stylesheet" href="assets/css/style.css">
+    
+    <!-- external link to fonts used from font awesome -->
     <link href="https://fonts.googleapis.com/css2?family=Kablammo&family=Orbit&display=swap" rel="stylesheet">
     <title>JavaScript Snake!</title>
 </head>
 <body>
     
+
     <h1 id="main-heading">JavaScript Snake</h1>
 
     <p id="instructions">Welcome to JavaScript Snake, want to know how to play? Its easy! You, the orange snake, must collect as much red food as possible without moving out of bounds or colliding with the snake itself, easy! To move the snake around, simply use the WASD keys on your keyboard, W for up, A for left, S for down and D for right. And remember, the snake cannot consume itself, that means you cannot move in the opposite direction of where you are currently going, if you are moving up or down, you must use A or D to chnage direction, and if you are moving side to side, you must use W and S to change direction!</p>
@@ -22,25 +25,28 @@
 
     <button id="restart">Restart</button> <!--reloads the page when the button is clicked-->
 
-    <footer class="col-12">
-        <div class="col-12">
+    <!-- footer with links to social media that open in a new tab when clicked -->
+    <footer>
+        <div>
             <ul>
             <li>
-                <a href="https://www.facebook.com/" target="_blank" rel="noopner" aria-label="visit facebook (open in a new tab)"><i class="fa-brands fa-square-facebook fa-2xl col-s-3 col-3"></i></a>
+                <a href="https://www.facebook.com/" target="_blank" rel="noopner" aria-label="visit facebook (open in a new tab)"><i class="fa-brands fa-square-facebook fa-2xl "></i></a>
             </li>
             <li>
-                <a href="https://www.instagram.com" target="_blank" rel="noopner" aria-label="visit instagram (open in a new tab)"><i class="fa-brands fa-square-instagram fa-2xl col-s-2 col-2"></i></a>
+                <a href="https://www.instagram.com" target="_blank" rel="noopner" aria-label="visit instagram (open in a new tab)"><i class="fa-brands fa-square-instagram fa-2xl "></i></a>
             </li>
             <li>
-                <a href="https://linkedin.com" target="_blank" rel="noopner" aria-label="visit linkedin (open in a new tab)"><i class="fa-brands fa-linkedin fa-2xl col-s-2 col-2"></i></a>
+                <a href="https://linkedin.com" target="_blank" rel="noopner" aria-label="visit linkedin (open in a new tab)"><i class="fa-brands fa-linkedin fa-2xl "></i></a>
             </li>
             <li>
-                <a href="https://www.youtube.com" target="_blank" rel="noopner" aria-label="visit youtube (open in a new tab)"><i class="fa-brands fa-youtube fa-2xl col-s-3 col-3" style="color: #d91212;"></i></a>
+                <a href="https://www.youtube.com" target="_blank" rel="noopner" aria-label="visit youtube (open in a new tab)"><i class="fa-brands fa-youtube fa-2xl style="color: #d91212;"></i></a>
             </li>
         </ul>
         </div>
     </footer>
+    <!-- end of footer and social media links -->
 
+    <!-- links to external font awesome and JavaScript files -->
     <script src="https://kit.fontawesome.com/9ca1dd2a7d.js" crossorigin="anonymous"></script>
     <script src="assets/js/script.js"></script>
 </body>
