add favicon image

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     
     <!-- external link to fonts used from font awesome -->
     <link href="https://fonts.googleapis.com/css2?family=Kablammo&family=Orbit&display=swap" rel="stylesheet">
+    <!-- external link to favicon for browser bar logo -->
+    <link rel='shortcut icon' type='image/x-icon' href='snakefavicon.png' />
     <title>JavaScript Snake!</title>
 </head>
 <body>
